Unified response validation.